# python-web-fall-2022

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
api/v1/: items.py  orders.py  users.py
api/v1/models/: base.py  items.py  mappers.py  orders.py
db/: base.py
db/models/: items.py  orders.py  users.py
