[tool.poetry]
name = "python-web-fall-2022"
version = "0.1.0"
description = ""
authors = ["Egor Sergeenko <es.egor.sergeenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"